--- a/front-end-com-bia/Projeto-Site-Pessoal/styles.css
+++ b/front-end-com-bia/Projeto-Site-Pessoal/styles.css
@@ -5,6 +5,31 @@ section {
     height: 100vh;
 }
 
+.titles {
+    color: #ffffff;
+    font-size: 3.8rem; /*61px/16px (1rem=16px)*/
+    text-transform: uppercase;
+}
+
+.defaultButton {
+    display: flex;
+    align-items: center;
+    width: fit-content;
+    padding: 8px 14px;
+    color: #ffffff;
+    border-radius: 8px;
+    cursor: pointer;
+
+    a{
+        padding-left: 11px;
+        text-decoration: none;
+        color: #ffffff;
+    }
+    img {
+        color: #ffffff;
+    }
+}
+
 nav {
     background-color: #ededed;
     width: 100%;
@@ -30,11 +55,6 @@ nav {
     display: flex;
     justify-content: space-between;
 
-    h1 {
-        color: #ffffff;
-        font-size: 3.8rem; /*61px/16px (1rem=16px)*/
-        text-transform: uppercase;
-    }
     
     h2 {
         color: #b6b6b6;
@@ -54,13 +74,46 @@ nav {
     #textsHome {
         display: flex;
         flex-direction: column;
-        padding: 200px;
         justify-content: center;
+        align-items: center;
+        width: 60vw;
     }
 }
 
 #aboutSection {
     background-color: #FF9E44;
+    display: flex;
+
+    #textsAboutMeFlexContainer {
+        padding-top: 65px;
+        width: 60vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        #textsAboutMeFlexItem {
+            width: 80%;
+        }
+    }
+
+    #photoAboutMe {
+        background-image: url(assets/photos/freepik__the-style-is-candid-image-photography-with-natural__87567.jpeg);
+        width: 40vw;
+        height: 100vh;
+        background-size: cover;
+        background-position: center;
+    }
+
+    p {
+        font-size: 1.75rem;
+        color: #ffffff;
+        line-height: 2.4rem;
+        padding: 45px 0 56px 0;
+    }
+
+    .linkedinButton {
+
+    }
 }
 
 #skillsSection {
@@ -72,20 +125,9 @@ nav {
 
 .downloadButton {
     background-color: #FF9E44;
-    display: flex;
-    align-items: center;
-    width: fit-content;
-    padding: 8px 14px;
-    color: #ffffff;
-    border-radius: 8px;
-    cursor: pointer;
+}
 
-    a{
-        padding-left: 11px;
-        text-decoration: none;
-        color: #ffffff;
-    }
-    img {
-        color: #ffffff;
-    }
+.linkedinButton {
+    background-color: #FEAF67;
+    padding: 14px;
 }
