feat(Aula 04): Usa o JS para validar se algum checkbox foi marcado e manipula o DOM de acordo com o resultado

--- a/front-end-com-bia/Aulas-Páginas-Dinâmicas/Aula-04-formularios/styles.css
+++ b/front-end-com-bia/Aulas-Páginas-Dinâmicas/Aula-04-formularios/styles.css
@@ -1,3 +1,34 @@
-* {
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
     font-family: 'Roboto', sans-serif;
+}
+
+body{
+    padding: 1rem;
+}
+
+h2{
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+}
+
+/* .caixa-de-texto{
+    display: flex;
+    flex-direction: column;
+} */
+
+form > div, form > fieldset{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 0.5rem;
+}
+
+input:invalid{
+    border-color: red;
+}
+
+input:valid{
+    border-color: green;
 }
