--- a/front-end-com-bia/Projeto-Site-Pessoal/styles.css
+++ b/front-end-com-bia/Projeto-Site-Pessoal/styles.css
@@ -5,8 +5,16 @@
     --darker-background: #222222;
     --border-radius-base: 8px;
 }
+
+ol, ul {
+    list-style: none;
+}
+
 * {
     font-family: "Rubik", sans-serif;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 section {
     min-height: 100vh;
