--- a/calculadora/src/css/style.css
+++ b/calculadora/src/css/style.css
@@ -106,6 +106,7 @@ body {
 .display-calculo {
     text-align: right;
     padding-right: 20px;
+    padding-bottom: 10px;
     font-size: 30px;
 }
 
