fix(Calculadora): Corrige a função de apagar o últ imo caractere e ajusta o layout.

--- a/calculadora/src/css/style.css
+++ b/calculadora/src/css/style.css
@@ -35,14 +35,14 @@ a {
 
 /* -------------------------------------------------------------------------- */
 
-body {
+main {
     display: flex;
     justify-content: center; /* Centraliza na horizontal */
     align-items: center;     /* Centraliza na vertical */
     height: 100vh;           /* Faz o body ocupar toda a altura da tela */
     background-color: var(--background-color);
+    margin-bottom: 0px;
 }
-
 
 /* Estilização da Calculadora */
 
